--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ youtube_username                          :
 
 
 # Feature List                            Edit, add or remove features to be presented.
-features                                  : This is a test
+features                                  :
 
   - title                                 :
     description                           :
