--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ features                                  :
   - title                                 :
     description                           :
     fontawesome_icon_name                 : 
+    
+  - title                                 : Siri Shortcuts
+    description                           : Use Siri Shortcuts to quickly take a photo
+                                            Use Siri Shortcuts to quickly select images from the photo library
+    fontawesome_icon_name                 : microphone
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
