--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 :
-    description                           :
+  - title                                 : Configuration Options
+    description                           : Current date/time or manually select a date/time; Location of the timestamp on the image; Color of the timestamp; Format of the timestamp; Font of the timestamp
     fontawesome_icon_name                 : 
     
   - title                                 : Siri Shortcuts
